--- a/example.ipynb
+++ b/example.ipynb
@@ -290,7 +290,7 @@
     "model_cfg = yaml.load(open(model_config_path, \"r\"), Loader=yaml.Loader)\n",
     "model_cfg[\"device\"] = device\n",
     "model = MutaPLM(**model_cfg).to(device)\n",
-    "new_ckpt = torch.load(open(mutaplm_ckpt, \"rb\"), map_location=\"cpu\")[\"model\"]\n",
+    "new_ckpt = torch.load(open(\"./ckpts/mutaplm.pth\", \"rb\"), map_location=\"cpu\")[\"model\"]\n",
     "model.load_state_dict(new_ckpt, strict=False)\n",
     "model.eval()"
    ]
